--- a/app/src/main/res/layout/creative_fragment.xml
+++ b/app/src/main/res/layout/creative_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TableLayout
+        android:id="@+id/heldTable"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -55,7 +56,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/artLabel"
@@ -64,39 +65,39 @@
                 android:text="@string/artLabel" />
 
             <EditText
-                style="@style/secondaryTableRowInput"
                 android:id="@+id/artValueInput"
+                style="@style/secondaryTableRowInput"
                 android:layout_width="wrap_content"
                 android:inputType="number" />
 
             <TextView
-                style="@style/secondaryTableRowData"
                 android:id="@+id/artModValue"
+                style="@style/secondaryTableRowData"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
-                style="@style/secondaryTableRowData"
                 android:id="@+id/artClassTotal"
+                style="@style/secondaryTableRowData"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
-                style="@style/secondaryTableRowData"
                 android:id="@+id/artNatBonus"
+                style="@style/secondaryTableRowData"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
-                style="@style/secondaryTableRowData"
                 android:id="@+id/artTotal"
+                style="@style/secondaryTableRowData"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/danceLabel"
@@ -138,7 +139,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/forgeLabel"
@@ -180,7 +181,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/musicLabel"
@@ -222,11 +223,11 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
-                style="@style/secondaryTableRowHead"
                 android:id="@+id/sleightLabel"
+                style="@style/secondaryTableRowHead"
                 android:layout_height="wrap_content"
                 android:text="@string/sleightLabel" />
 
