--- a/app/src/main/res/layout/perception_fragment.xml
+++ b/app/src/main/res/layout/perception_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <TableLayout
+        android:id="@+id/heldTable"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -55,7 +56,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/noticeLabel"
@@ -64,8 +65,8 @@
                 android:text="@string/noticeLabel" />
 
             <EditText
-                style="@style/secondaryTableRowInput"
                 android:id="@+id/noticeValueInput"
+                style="@style/secondaryTableRowInput"
                 android:layout_width="wrap_content"
                 android:inputType="number" />
 
@@ -96,7 +97,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/searchLabel"
@@ -105,8 +106,8 @@
                 android:text="@string/searchLabel" />
 
             <EditText
-                style="@style/secondaryTableRowInput"
                 android:id="@+id/searchValueInput"
+                style="@style/secondaryTableRowInput"
                 android:layout_width="wrap_content"
                 android:inputType="number" />
 
@@ -137,7 +138,7 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/trackLabel"
@@ -146,8 +147,8 @@
                 android:text="@string/trackLabel" />
 
             <EditText
-                style="@style/secondaryTableRowInput"
                 android:id="@+id/trackValueInput"
+                style="@style/secondaryTableRowInput"
                 android:layout_width="wrap_content"
                 android:inputType="number" />
 
