--- a/app/src/main/res/layout/social_fragment.xml
+++ b/app/src/main/res/layout/social_fragment.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <TableLayout
+        android:id="@+id/heldTable"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
