--- a/app/src/main/res/layout/fragment_secondary_ability.xml
+++ b/app/src/main/res/layout/fragment_secondary_ability.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/athleticsToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/athleticsLabel"
@@ -37,7 +37,7 @@
                 android:id="@+id/socialToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/socialLabel"
@@ -55,7 +55,7 @@
                 android:id="@+id/perceptionToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/perceptionLabel"
@@ -73,7 +73,7 @@
                 android:id="@+id/intellectualToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/intellectualLabel"
@@ -91,7 +91,7 @@
                 android:id="@+id/vigorToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/vigorLabel"
@@ -109,7 +109,7 @@
                 android:id="@+id/subterfugeToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/subterfugeLabel"
@@ -127,7 +127,7 @@
                 android:id="@+id/creativeToggle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:button="@android:drawable/ic_menu_more"
+                android:button="@android:drawable/arrow_down_float"
                 android:buttonTint="#000000"
                 android:textAlignment="center"
                 android:textOff="@string/creativeLabel"
