--- a/app/src/main/res/layout/vigor_fragment.xml
+++ b/app/src/main/res/layout/vigor_fragment.xml
@@ -84,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
+            <CheckBox
                 android:id="@+id/composureNatBonus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -126,7 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
+            <CheckBox
                 android:id="@+id/strFeatNatBonus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -167,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
+            <CheckBox
                 android:id="@+id/resistPainNatBonus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
